Add vimrc notes to HACKING file.

--- a/HACKING
+++ b/HACKING
@@ -7,3 +7,25 @@ it all the time.) If you don't use Emacs, please do your best to
 remove trailing spaces from lines. This reduces the number of lines of
 diff output we need to look at be removing all changes due to
 unimportant (and invisible) changes in spacing.
+
+* If you use VIM:
+
+Add the following to your ~/.vimrc file, as you like, removing the
+lines that start with the `-` character.
+
+- 4 space tabs
+set tabstop=4
+set shiftwidth=4
+set softtabstop=4
+set expandtab
+
+- Remove trailing whitespaces on save (:w)
+autocmd BufWritePre * :%s/\s\+$//e
+
+- Highlight trailing whitespace
+highlight ExtraWhitespace ctermbg=red guibg=red
+au ColorScheme * highlight ExtraWhitespace guibg=red
+au BufEnter * match ExtraWhitespace /\s\+$/
+au InsertEnter * match ExtraWhitespace /\s\+\%#\@<!$/
+au InsertLeave * match ExtraWhiteSpace /\s\+$/
+
